<resources>

    <string name="app_name">Weather DMI</string>

    <string name="weather_search_hint">Search here...</string>
    <string name="weather_headline">Results for %s</string>
    <string name="weather_description">Description</string>
    <string name="weather_temp">Temperature</string>
    <string name="weather_humidity">Humidity</string>
    <string name="weather_wind_speed">Wind Speed</string>
    <string name="weather_map_btn">Open map</string>
</resources>