<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
                name="clickListener"
                type="at.ict4d.weather2.WeatherFragment"/>

        <variable
                name="weatherResult"
                type="at.ict4d.weather2.WeatherResult"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".WeatherFragment">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/weather_search_hint"
                android:ems="10"
                android:id="@+id/search_edit_text"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/searchButton"/>

        <ImageButton
                android:src="@drawable/ic_search_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> clickListener.onSearchClicked()}"
                app:layout_constraintTop_toTopOf="@+id/search_edit_text"
                app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"/>

        <TextView
                android:text="@string/weather_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/headline"
                android:layout_marginTop="16dp"
                android:visibility="@{weatherResult == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
                app:layout_constraintStart_toStartOf="@+id/search_edit_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/searchButton"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/headline"
                app:layout_constraintStart_toStartOf="@+id/headline"
                android:visibility="@{weatherResult == null ? View.GONE : View.VISIBLE}"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/description_tv"
                android:layout_marginEnd="16dp"
                android:text="@string/weather_description"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description_tv"
                app:layout_constraintEnd_toEndOf="@+id/headline"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                android:text="@{weatherResult.description}"
                tools:text="clear sky"/>

        <TextView
                android:text="@string/weather_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/temp_tv"
                android:visibility="@{weatherResult == null ? View.GONE : View.VISIBLE}"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_tv"
                app:layout_constraintEnd_toEndOf="@+id/description_tv"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/description_tv"
                tools:text="28C"
                android:text="@{weatherResult.temperature}"/>

        <Button
                android:text="@string/weather_map_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_marginTop="16dp"
                android:visibility="@{weatherResult == null ? View.GONE : View.VISIBLE}"
                android:onClick="@{() -> clickListener.onOpenMap()}"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/temp_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>